css/styles.css
body {
  font-family: 'Gloria Hallelujah', cursive;
  background-color: #dcdcdc;
}

header {
  text-align: center;
  background-color: #129afd;
  font-size: 0.75rem;
}

button {
  font-family: 'Gloria Hallelujah', cursive;
  background-color: rgba(0, 0, 0, 0);
  border: none;
}

.navigation {
  background-color: #c5ac55;
  border-style: none;
}

.navigation:focus {
  background-color: khaki;
}

.redo {
  color: #7912fd;
}

.hp-image {
  border-radius: 5px;
}

.window {
  border-radius: 5px;
  background-color: white;
}

.recipe-buttons {
  font-size: 1.25rem;
  background-color: rgba(0, 0, 0, 0);
  border: none;
}

.recipe-header {
  font-size: 1.25rem;
}

.title {
  font-size: 1rem;
  font-family: Arial, Helvetica, sans-serif;
}

p.directions {
  font-size: 0.75rem;
  font-family: Arial, Helvetica, sans-serif;
}

.combo-window {
  border-radius: 5px;
  background-color: white;
}

.saved-items-window {
  border-radius: 5px;
}

.saved-item.beer,
.saved-item.recipe {
  border: 1px solid black;
  border-radius: 5px;
}

.saved-item.combo {
  border: 1px solid black;
  font-size: 0.5rem;
}

.error-container {
  background-color: rgba(83, 83, 83, 0.25);
}

.error {
  background-color: gray;
}

.modal {
  background-color: rgba(128, 128, 128, 0.75);
}

